--- a/SeleniumPractice/test-output/old/Default suite/methods.html
+++ b/SeleniumPractice/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b264a1">  <td>24/03/12 17:42:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM.loginTestWithValidCredential()[pri:2, instance:Demo.OrangeHRM@223191a6]">loginTestWithValidCredential</td> 
+<tr bgcolor="b264a1">  <td>24/03/13 14:51:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM.doLoginWithInvalidCredential()[pri:1, instance:Demo.OrangeHRM@49139829]">doLoginWithInvalidCredential</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>24/03/12 17:42:15</td>   <td>-7428</td> <td>&nbsp;</td><td title="&gt;&gt;OrangeHRM.setup()[pri:0, instance:Demo.OrangeHRM@223191a6]">&gt;&gt;setup</td> 
+<tr bgcolor="b264a1">  <td>24/03/13 14:51:26</td>   <td>15413</td> <td>&nbsp;</td><td title="&lt;&lt;OrangeHRM.tearDown()[pri:0, instance:Demo.OrangeHRM@49139829]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>24/03/12 17:42:19</td>   <td>-3246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM.doLoginWithInvalidCredential()[pri:1, instance:Demo.OrangeHRM@223191a6]">doLoginWithInvalidCredential</td> 
+<tr bgcolor="b264a1">  <td>24/03/13 14:51:07</td>   <td>-3959</td> <td>&nbsp;</td><td title="&gt;&gt;OrangeHRM.setup()[pri:0, instance:Demo.OrangeHRM@49139829]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>24/03/13 14:51:16</td>   <td>4689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM.addEmployee()[pri:3, instance:Demo.OrangeHRM@49139829]">addEmployee</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>24/03/12 17:42:24</td>   <td>1095</td> <td>&nbsp;</td><td title="&lt;&lt;OrangeHRM.tearDown()[pri:0, instance:Demo.OrangeHRM@223191a6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>24/03/13 14:51:15</td>   <td>3507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM.loginTestWithValidCredential()[pri:2, instance:Demo.OrangeHRM@49139829]">loginTestWithValidCredential</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
 </table>
