--- a/SeleniumPractice/test-output/old/Default suite/methods-not-run.html
+++ b/SeleniumPractice/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>Demo.OrangeHRM.searchEmployeeNyName</td></tr>
+<tr><td>Demo.OrangeHRM.addEmployee</td></tr>
+<tr><td>Demo.OrangeHRM.loginTestWithValidCredential</td></tr>
+<tr><td>Demo.OrangeHRM.doLoginWithInvalidCredential</td></tr>
 </table>
