--- a/SeleniumPractice/test-output/index.html
+++ b/SeleniumPractice/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ASUS\AppData\Local\Temp\testng-eclipse--454644435\testng-customsuite.xml</span>
+                    <span>C:\Users\ASUS\AppData\Local\Temp\testng-eclipse-1960937000\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,22 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Demo.OrangeHRM" class="method navigator-link" hash-for-method="addEmployee">addEmployee</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Demo.OrangeHRM" class="method navigator-link" hash-for-method="doLoginWithInvalidCredential">doLoginWithInvalidCredential</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Demo.OrangeHRM" class="method navigator-link" hash-for-method="loginTestWithValidCredential">loginTestWithValidCredential</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Demo.OrangeHRM" class="method navigator-link" hash-for-method="searchEmployeeNyName">searchEmployeeNyName</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Demo.OrangeHRM" class="method navigator-link" hash-for-method="searchEmployeeById">searchEmployeeById</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -141,30 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addEmployee">
-                  </a> <!-- addEmployee -->
-                  <span class="method-name">addEmployee</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="doLoginWithInvalidCredential">
-                  </a> <!-- doLoginWithInvalidCredential -->
-                  <span class="method-name">doLoginWithInvalidCredential</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginTestWithValidCredential">
-                  </a> <!-- loginTestWithValidCredential -->
-                  <span class="method-name">loginTestWithValidCredential</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="searchEmployeeNyName">
-                  </a> <!-- searchEmployeeNyName -->
-                  <span class="method-name">searchEmployeeNyName</span>
+                  <a name="searchEmployeeById">
+                  </a> <!-- searchEmployeeById -->
+                  <span class="method-name">searchEmployeeById</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -172,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ASUS\AppData\Local\Temp\testng-eclipse--454644435\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ASUS\AppData\Local\Temp\testng-eclipse-1960937000\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -221,28 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addEmployee')
+data.setCell(0, 1, 'searchEmployeeById')
 data.setCell(0, 2, 'Demo.OrangeHRM')
-data.setCell(0, 3, 13703);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'searchEmployeeNyName')
-data.setCell(1, 2, 'Demo.OrangeHRM')
-data.setCell(1, 3, 11210);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'doLoginWithInvalidCredential')
-data.setCell(2, 2, 'Demo.OrangeHRM')
-data.setCell(2, 3, 3559);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'loginTestWithValidCredential')
-data.setCell(3, 2, 'Demo.OrangeHRM')
-data.setCell(3, 3, 3328);
+data.setCell(0, 3, 9937);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 31 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -257,9 +209,22 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">4 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">Demo.OrangeHRM</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">searchEmployeeNyName</span>
+                <br/>
+                <span class="ignored-method-name">addEmployee</span>
+                <br/>
+                <span class="ignored-method-name">loginTestWithValidCredential</span>
+                <br/>
+                <span class="ignored-method-name">doLoginWithInvalidCredential</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -274,24 +239,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">doLoginWithInvalidCredential</span>
-                <span class="method-start">5446 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">loginTestWithValidCredential</span>
-                <span class="method-start">9010 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">addEmployee</span>
-                <span class="method-start">12340 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">searchEmployeeNyName</span>
-                <span class="method-start">26045 ms</span>
+                <span class="method-name">searchEmployeeById</span>
+                <span class="method-start">6216 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">37257 ms</span>
+                <span class="method-start">16160 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
