--- a/SeleniumPractice/test-output/old/Default suite/classes.html
+++ b/SeleniumPractice/test-output/old/Default suite/classes.html
@@ -23,6 +23,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>searchEmployeeById</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>addEmployee</td>
 <td>&nbsp;</td></tr>
 <tr>
