--- a/SeleniumPractice/test-output/old/Default suite/classes.html
+++ b/SeleniumPractice/test-output/old/Default suite/classes.html
@@ -27,6 +27,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>deleteEmployee</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>searchEmployeeById</td>
 <td>&nbsp;</td></tr>
 <tr>
