--- a/SeleniumPractice/test-output/old/Default suite/methods.html
+++ b/SeleniumPractice/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b264a1">  <td>24/03/22 12:17:52</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrangeHRM.setup()[pri:0, instance:Demo.OrangeHRM@1b7cc17c]">&gt;&gt;setup</td> 
+<tr bgcolor="b264a1">  <td>24/03/26 16:16:55</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrangeHRM.setup()[pri:0, instance:Demo.OrangeHRM@59662a0b]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>24/03/22 12:18:37</td>   <td>45130</td> <td>&nbsp;</td><td title="&lt;&lt;OrangeHRM.tearDown()[pri:0, instance:Demo.OrangeHRM@1b7cc17c]">&lt;&lt;tearDown</td> 
+<tr bgcolor="b264a1">  <td>24/03/26 16:17:10</td>   <td>14986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM.addEmployee()[pri:3, instance:Demo.OrangeHRM@59662a0b]">addEmployee</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>24/03/26 16:17:50</td>   <td>55229</td> <td>&nbsp;</td><td title="&lt;&lt;OrangeHRM.tearDown()[pri:0, instance:Demo.OrangeHRM@59662a0b]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>24/03/22 12:18:13</td>   <td>20984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM.addEmployee()[pri:3, instance:Demo.OrangeHRM@1b7cc17c]">addEmployee</td> 
+<tr bgcolor="b264a1">  <td>24/03/26 16:17:34</td>   <td>38707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM.deleteEmployee()[pri:7, instance:Demo.OrangeHRM@59662a0b]">deleteEmployee</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
