--- a/SeleniumPractice/test-output/old/Default suite/methods.html
+++ b/SeleniumPractice/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b264a1">  <td>24/04/03 13:09:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrangeHRM.setup()[pri:0, instance:Demo.OrangeHRM@67c27493]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>24/04/03 13:09:46</td>   <td>22186</td> <td>&nbsp;</td><td title="&lt;&lt;OrangeHRM.tearDown()[pri:0, instance:Demo.OrangeHRM@67c27493]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="b264a1">  <td>24/04/03 13:09:29</td>   <td>5384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHRM.applyLeave()[pri:9, instance:Demo.OrangeHRM@67c27493]">applyLeave</td> 
+<tr bgcolor="b264a1">  <td>24/04/12 17:30:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTestWithValidCredential()[pri:2, instance:Tests.LoginTest@4ec4f3a0]">loginTestWithValidCredential</td> 
   <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>24/04/12 17:30:47</td>   <td>-3453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.doLoginWithInvalidCredential()[pri:1, instance:Tests.LoginTest@4ec4f3a0]">doLoginWithInvalidCredential</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>24/04/12 17:30:51</td>   <td>1199</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:Tests.LoginTest@4ec4f3a0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="b264a1">  <td>24/04/12 17:30:41</td>   <td>-9216</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:Tests.LoginTest@4ec4f3a0]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
